syntax = "proto3";

package user;

option go_package = "user";

service User {
	// 获取用户信息
	rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse) {}
}

message GetUserInfoRequest {
	int64 user_id 	= 1;
}

message GetUserInfoResponse {
	int64  user_id 	= 1;
	string name 	= 2;
}
